[package]
name = "rs-hexpyt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rs_hexpyt"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"

[dependencies.hexparser]
git = "https://github.com/Calcoph/hexpat-lsp"
rev = "fbbe9e8"
